kubernetes/apps/cnpg/app/idvn.tcp-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: idvn-cnpg
spec:
  parentRefs:
    - name: gateway-idvn-public
      sectionName: cnpg
      namespace: gateway-api
  rules:
    - backendRefs:
        - name: cnpg-rw
          port: 5432
